# vtk-collection-mesher_public

./: .gitignore  CMakeLists.txt  Mesher.h  OctoTree.h  PolycrystalIMPMesher.h  README.md  vtk-collection-mesher.cc
examples/: Polycrystal.h  PolycrystalIMPs.h  SingleParticle.h  example_particle.vtk
examples/test-8g-0p/: imp_rve_inp.json
examples/test-8g-0p/steps/: grain-1.step  grain-2.step  grain-3.step  grain-4.step  grain-5.step  grain-6.step  grain-7.step  grain-8.step
examples/test-8g-0p/vtp/: grain-1.vtp  grain-2.vtp  grain-3.vtp  grain-4.vtp  grain-5.vtp  grain-6.vtp  grain-7.vtp  grain-8.vtp
